k8s/deployment_multi_containers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: helloworld
  name: helloworld
spec:
  replicas: 50
  selector:
    matchLabels:
      app: helloworld
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: helloworld
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - sleep 500
        image: busybox
        name: busybox
        ports:
        - containerPort: 8080
        resources: {}
status: {}
