k8s/pod_configmap_volume.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: helloworld-configmap-volume
  name: helloworld-configmap-volume
spec:
  containers:
  - image: gcr.io/google-samples/hello-app:1.0
    name: helloworld-configmap-volume
    ports:
    - containerPort: 8080
    resources: {}
    #env:
    #  - name: TEST_ENV
    #    #value: Hello_World
    #    valueFrom:
    #      configMapKeyRef:
    #        # specify configMap name
    #        name: my-config
    #        # specify key in configMap name
    #        key: TEST_ENV
    volumeMounts:
    # specify volume name
    - name: my-config-volume
      mountPath: /myconfig/TEST_ENV
  volumes:
  - name: my-config-volume
    configMap:
      name: my-config
      items:
      - key: TEST_ENV
        path: keys/keys # mountPathの下にこの階層でファイルが出来る
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
