k8s/pod_multi_containers.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: helloworld-multi-containers
  name: helloworld-multi-containers
spec:
  containers:
  - image: gcr.io/google-samples/hello-app:1.0
    name: helloworld
    ports:
    - containerPort: 8080
    resources: {}
  - command:
    - /bin/sh
    - -c
    - sleep 20
    image: busybox
    name: sleep
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
