k8s/sleep.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sleep
  name: sleep
spec:
  containers:
  - command:
    - /bin/sh
    - -c
    - sleep 20
    image: busybox
    name: sleep
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
