k8s/ingress_pass.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-v2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /helloworld-v2
            pathType: Prefix
            backend:
              service:
                name: helloworld-v2-nodeport
                port:
                  number: 8080
